[project]
name = "ticonderoga-dashboard"
version = "1.0.0"
description = "Event-Aware Streaming Realtime Ingestion Engine Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
]

[tool.uv]
package = false

[tool.ruff]
# Target Python version for format optimization
target-version = "py310"
line-length = 88

[tool.ruff.lint]
# Enable standard Pyflakes (F) and Morrow/Flake8 (E, W) codes for CI passing
select = ["E", "F", "W", "I"]
