[project]
name = "ticonderoga-dashboard"
version = "1.0.0"
description = "Event-Aware Streaming Realtime Ingestion Engine Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
]

[tool.setuptools]
# Explicitly prevent automatic discovery from scanning your web assets
packages = ["api"]

[tool.uv]
package = false

