[project]
name = "ticonderoga-dashboard"
version = "1.0.0"
description = "Event-Aware Streaming Realtime Ingestion Engine Architecture"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.0",
]

[tool.setuptools]
# Force setuptools to look ONLY inside the api folder and ignore absolutely everything else
packages = ["api"]
package-dir = {"" = "."}

[tool.uv]
package = false
